# mcp-routing-gateway-server

./: Dockerfile  README.md  README_JA.md  cov  devsetup  gateway_config.yaml  gateway_config_example.json  mcp_config.json  pyproject.toml
doc/: user_manual_en.md  user_manual_ja.md
src/mcp_gateway/: cli.py
src/mcp_gateway/backend/: client.py
src/mcp_gateway/core/: registry.py
src/mcp_gateway/frontend/: control_plane.py  data_plane.py
tests/: test_cli_signals.py
tests/integration/: conftest.py  mock_backend.py  test_cli_e2e.py  test_client_sse_message.py
tests/test_backend/: test_client.py  test_client_boundary.py  test_client_extra.py  test_client_final.py  test_timeout.py
tests/test_core/: test_registry.py  test_registry_dynamic.py  test_registry_final.py
tests/test_frontend/: test_control_plane.py  test_control_plane_extra.py  test_data_plane.py  test_data_plane_error.py  test_data_plane_final.py  test_data_plane_missing.py  test_data_plane_sampling.py
