[project]
name = "mcp-routing-gateway"
version = "0.2.3"
description = "A stateless MCP routing gateway that acts as a secure facade for AI agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.0",        # MCP公式SDK (サーバーおよびクライアントのプロトコル処理を全委譲)
    "pydantic>=2.0.0",   # 内部のJSONスキーマ検証用
]

[project.scripts]
mcp-gateway = "mcp_gateway.cli:main"