[project]
name = "mcp-routing-gateway"
version = "0.2.3"
description = "A stateless MCP routing gateway that acts as a secure facade for AI agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-routing-gateway = "mcp_gateway.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_gateway"]
